--- a/blocks/slider/assets/style.scss
+++ b/blocks/slider/assets/style.scss
@@ -1,13 +1,13 @@
 .se-slider {
-    @apply relative bg-very-dark-blue py-[48px] sm:pt-[160px] sm:pb-[150px] px-[24px] sm:px-[87px] flex flex-col gap-[70px] items-center cursor-pointer;
+    @apply relative bg-very-dark-blue py-[48px] lg:pt-[160px] lg:pb-[150px] px-[24px] lg:px-[87px] flex flex-col gap-[70px] items-center cursor-pointer;
 }
 
 .se-slider--mobile {
-    @apply sm:hidden;
+    @apply lg:hidden;
 }
 
 .se-slider--desktop {
-    @apply hidden sm:flex sm:flex-col sm:gap-[75px];
+    @apply hidden lg:flex lg:flex-col lg:gap-[75px];
 }
 
 .se-slider__overlay {
@@ -15,11 +15,11 @@
 }
 
 .se-slider__header {
-    @apply relative z-10 flex w-full max-w-[414px] sm:max-w-[1266px] flex-row sm:gap-[40px] items-center;
+    @apply relative z-10 flex w-full max-w-[414px] lg:max-w-[1266px] flex-row lg:gap-[40px] items-center;
 }
 
 .se-slider__header-divider {
-    @apply w-[32px] h-[0px] border-[1px] border-se-yellow -rotate-90 -ml-[32px] sm:-ml-[73px];
+    @apply w-[32px] h-[0px] border-[1px] border-se-yellow -rotate-90 -ml-[32px] lg:-ml-[73px];
 }
 
 .se-slider__header-title {
@@ -27,7 +27,7 @@
 }
 
 .se-slider__controls {
-    @apply hidden sm:flex items-center gap-[40px] ml-auto cursor-pointer;
+    @apply hidden lg:flex items-center gap-[40px] ml-auto cursor-pointer;
 }
 
 .se-slider__progress-track {
@@ -47,11 +47,11 @@
 }
 
 .se-slider__slides {
-    @apply relative z-10 w-full max-w-[414px] sm:max-w-[1266px] flex flex-col gap-[48px] sm:grid sm:gap-0;
+    @apply relative z-10 w-full max-w-[414px] lg:max-w-[1266px] flex flex-col gap-[48px] lg:grid lg:gap-0;
 }
 
 .se-slider__slide {
-    @apply flex flex-col gap-[26px] sm:col-start-1 sm:row-start-1 sm:flex-row sm:items-center sm:gap-[304px];
+    @apply flex flex-col gap-[26px] lg:col-start-1 lg:row-start-1 lg:flex-row lg:items-center lg:gap-[304px];
 }
 
 .se-slider__slide.is-active {
@@ -59,7 +59,7 @@
 }
 
 .se-slider__text-col {
-    @apply sm:w-[406px] flex-shrink-0;
+    @apply lg:w-[406px] flex-shrink-0;
 }
 
 .se-slider__text {
@@ -71,7 +71,7 @@
 }
 
 .se-slider__slide-title {
-    @apply text-[32px] font-[500] leading-[1.25] mt-[32px] sm:mt-[40px];
+    @apply text-[32px] font-[500] leading-[1.25] mt-[32px] lg:mt-[40px];
 }
 
 .se-slider__slide-desc {
@@ -79,7 +79,7 @@
 }
 
 .se-slider__cta {
-    @apply relative overflow-hidden w-[145px] h-[48px] border-[1px] border-se-yellow rounded-[4px] px-[24px] py-[15px] mt-[32px] sm:mt-[40px] flex justify-center items-center;
+    @apply relative overflow-hidden w-[145px] h-[48px] border-[1px] border-se-yellow rounded-[4px] px-[24px] py-[15px] mt-[32px] lg:mt-[40px] flex justify-center items-center;
 }
 
 .se-slider__cta-text {
@@ -100,11 +100,11 @@
 }
 
 .se-slider__image-wrap {
-    @apply w-[511px] h-[323.63px] sm:w-[900px] sm:h-[570px] py-[14.2px] sm:py-[25px] px-[16.63px] sm:px-[24px] border-[1px] border-se-dark-navy rounded-[24px] flex-shrink-0;
+    @apply w-[511px] h-[323.63px] lg:w-[900px] lg:h-[570px] py-[14.2px] lg:py-[25px] px-[16.63px] lg:px-[24px] border-[1px] border-se-dark-navy rounded-[24px] flex-shrink-0;
 }
 
 .se-slider__image {
-    @apply w-[483.75px] h-[295.24px] sm:w-[852px] sm:h-[520px] rounded-[16px] bg-white shadow-[0_0_160px_rgba(46,123,255,0.5)];
+    @apply w-[483.75px] h-[295.24px] lg:w-[852px] lg:h-[520px] rounded-[16px] bg-white shadow-[0_0_160px_rgba(46,123,255,0.5)];
 }
 
 .se-slider__image.is-shadow-alt {
